# that-stack-starter

./: .gitignore  .prettierrc  Cargo.toml  README.md  justfile  package.json  tailwind.config.js
src/: main.rs
templates/layouts/: base.tera
templates/macros/: context.tera
templates/pages/: index.tera  some_page.tera
