[package]
name = "that-stack-starter"
authors = ["Klaus Borges"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
lazy_static = "1.4.0"
notify = "6.1.1"
serde_json = "1.0.117"
tera = "1.20.0"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-livereload = "0.9.2"
